sample-project/mongo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: db-mongodb
        image: mongo:4.0-rc-xenial
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: web-mongodb
spec:
  selector:
    app: mongodb
  type: NodePort
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
    nodePort: 31017
